sources += files(
	'ch_http.c',
	'ch_http_data_parse.c',
	'ch_http_session.c',
	'ch_http_session_body.c',
	'ch_http_session_entry.c',
	'ch_http_ctypes.c'
)

headers += files(

	'ch_http_ctypes.h',
	'ch_http_data_parse.h',
	'ch_http.h',
	'ch_http_session_body.h',
	'ch_http_session_entry.h',
	'ch_http_session.h'
)