sources += files(
	'ch_mail.c',
	'ch_mail_session.c',
	'ch_mail_auth.c',
	'ch_mail_common.c',
	'ch_mail_decode_mime.c',
	'ch_mail_file.c',
	'ch_mail_session_entry.c',
	'smtp_parser.c',
	'pop3_parser.c',
	'imap_parser.c'
)

headers += files(
	'ch_mail_auth.h',
	'ch_mail_common.h',
	'ch_mail_decode_mime.h',
	'ch_mail_file.h',
	'ch_mail.h',
	'ch_mail_session_buffer.h',
	'ch_mail_session_entry.h',
	'ch_mail_session.h',
	'imap_parser.h',
	'pop3_parser.h',
	'smtp_parser.h'
)