sources += files(
	'ch_dns_app.c',
	'ch_dns_session.c',
	'ch_dns_header.c',
	'ch_dns_request.c',
	'ch_dns_response.c',
	'ch_dns_name.c',
	'ch_dns_rdata_pool.c',
	'ch_dns_rdata_cname.c',
	'ch_dns_rdata_afsdb.c',
	'ch_dns_rdata_hinfo.c',
	'ch_dns_rdata_ipv4.c',
	'ch_dns_rdata_ipv6.c',
	'ch_dns_rdata_mb.c',
	'ch_dns_rdata_md.c',
	'ch_dns_rdata_mf.c',
	'ch_dns_rdata_mg.c',
	'ch_dns_rdata_minfo.c',
	'ch_dns_rdata_mr.c',
	'ch_dns_rdata_mx.c',
	'ch_dns_rdata_ns.c',
	'ch_dns_rdata_null.c',
	'ch_dns_rdata_pool.c',
	'ch_dns_rdata_ptr.c',
	'ch_dns_rdata_soa.c',
	'ch_dns_rdata_txt.c',
	'ch_dns_rdata_wks.c',
	'ch_dns_rdata_caa.c',
	'ch_dns_rdata_cert.c',
	'ch_dns_rdata_dhcid.c',
	'ch_dns_rdata_dlv.c',
	'ch_dns_rdata_apl.c',
	'ch_dns_rdata_dname.c',
	'ch_dns_sec_key.c',
	'ch_dns_sec_sig.c',
	'ch_dns_rdata_dnskey.c',
	'ch_dns_rdata_ds.c',
	'ch_dns_rdata_gpos.c',
	'ch_dns_rdata_ipseckey.c',
	'ch_dns_rdata_isdn.c',
	'ch_dns_rdata_key.c',
	'ch_dns_rdata_kx.c',
	'ch_dns_rdata_loc.c',
	'ch_dns_rdata_naptr.c',
	'ch_dns_rdata_nsap_ptr.c',
	'ch_dns_rdata_nsap.c',
	'ch_dns_rdata_nsec3param.c',
	'ch_dns_rdata_nsec3.c',
	'ch_dns_rdata_nsec.c',
	'ch_dns_rdata_nxt.c',
	'ch_dns_rdata_openpgpkey.c',
	'ch_dns_rdata_opt.c',
	'ch_dns_rdata_px.c',
	'ch_dns_rdata_rp.c',
	'ch_dns_rdata_rrsig.c',
	'ch_dns_rdata_rt.c',
	'ch_dns_rdata_sig.c',
	'ch_dns_rdata_smimea.c',
	'ch_dns_txt_base.c',
	'ch_dns_rdata_spf.c',
	'ch_dns_rdata_srv.c',
	'ch_dns_rdata_sshfp.c',
	'ch_dns_rdata_tkey.c',
	'ch_dns_rdata_tlsa.c',
	'ch_dns_rdata_tsig.c',
	'ch_dns_rdata_x25.c',
	'ch_dns_rdata_uri.c'
)

headers += files(
	'ch_dns_app.h',
	'ch_dns_class.h',
	'ch_dns_data_input.h',
	'ch_dns_header.h',
	'ch_dns_name.h',
	'ch_dns_rdata_afsdb.h',
	'ch_dns_rdata_apl.h',
	'ch_dns_rdata_caa.h',
	'ch_dns_rdata_cert.h',
	'ch_dns_rdata_cname.h',
	'ch_dns_rdata_dhcid.h',
	'ch_dns_rdata_dlv.h',
	'ch_dns_rdata_dname.h',
	'ch_dns_rdata_dnskey.h',
	'ch_dns_rdata_ds.h',
	'ch_dns_rdata_gpos.h',
	'ch_dns_rdata.h',
	'ch_dns_rdata_hinfo.h',
	'ch_dns_rdata_ipseckey.h',
	'ch_dns_rdata_ipv4.h',
	'ch_dns_rdata_ipv6.h',
	'ch_dns_rdata_isdn.h',
	'ch_dns_rdata_key.h',
	'ch_dns_rdata_kx.h',
	'ch_dns_rdata_loc.h',
	'ch_dns_rdata_mb.h',
	'ch_dns_rdata_md.h',
	'ch_dns_rdata_mf.h',
	'ch_dns_rdata_mg.h',
	'ch_dns_rdata_minfo.h',
	'ch_dns_rdata_mr.h',
	'ch_dns_rdata_mx.h',
	'ch_dns_rdata_naptr.h',
	'ch_dns_rdata_nsap.h',
	'ch_dns_rdata_nsap_ptr.h',
	'ch_dns_rdata_nsec3.h',
	'ch_dns_rdata_nsec3param.h',
	'ch_dns_rdata_nsec.h',
	'ch_dns_rdata_ns.h',
	'ch_dns_rdata_null.h',
	'ch_dns_rdata_nxt.h',
	'ch_dns_rdata_openpgpkey.h',
	'ch_dns_rdata_opt.h',
	'ch_dns_rdata_pool.h',
	'ch_dns_rdata_ptr.h',
	'ch_dns_rdata_px.h',
	'ch_dns_rdata_rp.h',
	'ch_dns_rdata_rrsig.h',
	'ch_dns_rdata_rt.h',
	'ch_dns_rdata_sig.h',
	'ch_dns_rdata_smimea.h',
	'ch_dns_rdata_soa.h',
	'ch_dns_rdata_spf.h',
	'ch_dns_rdata_srv.h',
	'ch_dns_rdata_sshfp.h',
	'ch_dns_rdata_tkey.h',
	'ch_dns_rdata_tlsa.h',
	'ch_dns_rdata_tsig.h',
	'ch_dns_rdata_txt.h',
	'ch_dns_rdata_uri.h',
	'ch_dns_rdata_wks.h',
	'ch_dns_rdata_x25.h',
	'ch_dns_request.h',
	'ch_dns_response.h',
	'ch_dns_sec_key.h',
	'ch_dns_sec_sig.h',
	'ch_dns_session.h',
	'ch_dns_txt_base.h',
	'ch_dns_types.h'
)