sources += files(
	'ch_dns_app.c',
	'ch_dns_session.c',
	'ch_dns_header.c',
	'ch_dns_request.c',
	'ch_dns_response.c',
	'ch_dns_name.c',
	'ch_dns_rdata.c'
)

headers += files(
	'ch_dns_app.h',
	'ch_dns_data_input.h',
	'ch_dns_header.h',
	'ch_dns_name.h',
	'ch_dns_rdata.h',
	'ch_dns_request.h',
	'ch_dns_response.h',
	'ch_dns_session.h'
)